--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,10 @@ click = "*"
 [dev-packages]
 black = "*"
 fake-bpy-module-latest = "*"
+mypy = "*"
 
 [requires]
 python_version = "3.10"
+
+[scripts]
+check = "mypy ."
